--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -1,15 +1,15 @@
 name: NAStool Docker Dev
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - dev
-    paths:
-      - version.py
-      - .github/workflows/build-dev.yml
-      - package_list.txt
-      - requirements.txt
-      - docker/dev.Dockerfile
+#on:
+#  workflow_dispatch:
+#  push:
+#    branches:
+#      - dev
+#    paths:
+#      - version.py
+#      - .github/workflows/build-dev.yml
+#      - package_list.txt
+#      - requirements.txt
+#      - docker/dev.Dockerfile
 
 jobs:
   build:
