--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,15 @@
 name: NAStool Docker
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - master
-    paths:
-      - version.py
-      - .github/workflows/build.yml
-      - package_list.txt
-      - requirements.txt
-      - docker/Dockerfile
+#on:
+#  workflow_dispatch:
+#  push:
+#    branches:
+#      - master
+#    paths:
+#      - version.py
+#      - .github/workflows/build.yml
+#      - package_list.txt
+#      - requirements.txt
+#      - docker/Dockerfile
 
 jobs:
   build:
