--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ async-generator==1.10
 attrs==22.1.0
 backcall==0.2.0
 backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.11.1
+beautifulsoup4
 better-exceptions==0.3.3
 bs4==0.0.1
 cacheout==0.14.1
@@ -102,12 +102,12 @@ trio-websocket==0.9.2
 typing_extensions==4.3.0
 tzdata==2022.2
 tzlocal==4.2
-undetected-chromedriver==3.1.7
-urllib3==1.26.12
+undetected-chromedriver
+urllib3
 w3lib==2.0.1
 watchdog==2.1.9
 wcwidth==0.2.5
-webdriver-manager==3.8.5
+webdriver-manager
 websockets==10.3
 Werkzeug==2.2.3
 wsproto==1.2.0
