--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -54,7 +54,7 @@ jobs:
         path: D:/a/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/package/dist/nas-tools.exe
 
   Linux-build-amd64:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Init Python 3.10.10
         uses: actions/setup-python@v4
@@ -124,32 +124,6 @@ jobs:
 #        with:
 #          name: linux-arm64
 #          path: /home/runner/work/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/package/dist/nas-tools-unlock.linux.arm64
-
-  Linux-build-amd64-musl:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@master
-
-      - name: Set Up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set Up Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Package through pyinstaller
-        run: |
-          mkdir rootfs
-          docker buildx build --platform linux/amd64 --file ./package/builder/alpine.Dockerfile --build-arg branch=master --output type=local,dest=./rootfs .
-          mkdir -p /home/runner/work/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/package/dist/
-          cp ./rootfs/nas-tools /home/runner/work/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/package/dist/nas-tools-unlock.linux.musl.amd64
-        shell: pwsh
-
-      - name: Upload linux file
-        uses: actions/upload-artifact@v3
-        with:
-          name: linux-musl-amd64
-          path: /home/runner/work/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/package/dist/nas-tools-unlock.linux.musl.amd64
 
 #  Linux-build-arm64-musl:
 #    runs-on: ubuntu-latest
@@ -226,7 +200,7 @@ jobs:
   Create-release_Send-message:
     permissions: write-all
     runs-on: ubuntu-latest
-    needs: [Windows-build, Linux-build-amd64, Linux-build-amd64-musl]
+    needs: [Windows-build, Linux-build-amd64,]
     steps:
     - uses: actions/checkout@v2
 
