--- a/requirements.txt
+++ b/requirements.txt
@@ -85,7 +85,7 @@ regex==2022.9.13
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
-selenium==4.4.3
+selenium
 six==1.16.0
 slack-sdk==3.19.5
 sniffio==1.2.0
