--- a/requirements.txt
+++ b/requirements.txt
@@ -102,12 +102,12 @@ trio-websocket==0.9.2
 typing_extensions==4.3.0
 tzdata==2022.2
 tzlocal==4.2
-undetected-chromedriver
+undetected-chromedriver==3.5.0
 urllib3
 w3lib==2.0.1
 watchdog==2.1.9
 wcwidth==0.2.5
-webdriver-manager
+webdriver-manager==3.8.6
 websockets==10.3
 Werkzeug==2.2.3
 wsproto==1.2.0
